# tischkicker

./: .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.txt  vite.config.js
braschuene/: admin.py  apps.py  models.py  urls.py  views.py
braschuene/migrations/: 0001_initial.py  0002_debt_done.py  0003_remove_debt_receiver_remove_debt_sender_and_more.py  0004_remove_debt_done_debt_paid_at.py  0005_remove_debt_paid_at_debt_done.py
braschuene/templates/braschuene/: index.html
braschüne/: apps.py  forms.py  models.py  urls.py  views.py
braschüne/migrations/: 0001_initial.py  0002_alter_fourplayersgame_ev_defensive_and_more.py  0003_fourplayersgame_round_name_and_more.py  0004_beer.py  0005_beer_is_crate.py  0006_beer_is_done.py  0007_twoplayersgame.py  0008_threeplayersgame.py  0009_profile_sicherungskasten.py  0010_alter_profile_sicherungskasten.py  0011_alter_profile_sicherungskasten.py  0012_fourplayersgame_ev_score_fourplayersgame_sd_score_and_more.py  0013_profile_inside_tag_id.py  0014_alter_profile_inside_tag_id.py  0015_profile_isguest.py  0016_profile_imagefile_alter_profile_image.py
braschüne/templates/accounts/: inside.html  profile.html
braschüne/templates/braschüne/: base.html  createPlayer.html  goalButton.html  index.html
public/: robots.txt
scripts/: run.sh
tischkicker/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
tischkicker/settings/: __init__.py  base.py  dev.py  production.py
tischkicker/staticfiles/: finders.py  views.py
(+6 files in other folders)
